--- a/javaScript/PracticePlace/index.html
+++ b/javaScript/PracticePlace/index.html
@@ -15,6 +15,8 @@
             <span>Click Me</span>
         </button>
         <input type="checkbox" id="check">
+        <input type="text" id="search" placeholder="Type here..." />
+        <button id="btn">Click Me Fast!</button>
     </div>
     <script src="./index.js"></script>
 </body>
